# agenda-palestrinha

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_EN.md  Makefile  README.md  README_EN.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: Adicionar evento .yml  Atualizar evento.yml  Remover evento.yml  adicionar_evento .yml  adicionar_evento.yml  atualizar_evento.yml  remover_evento.yml
.github/workflow/: Extrair_dados_issue.yml  extrair_dados_issue.yml
.github/workflows/: adicionar_evento.yml  ci.yml  exibir_dados_issue.yml  extrair_dados_issue.yml
backend/: adicionar_evento.py  esquema_issue_evento.json  validar_evento.py
script/: adicionar_evento.py  atualizar_evento.py  excluir_evento.py  processa_issue.py
tests/: test_adicionar_evento.py  test_estrutura.py  test_validar_evento.py
